test/runnable/autotest.nt
module autotest;

macro import std.macro.assert;

void main() {
    assert(foo == 5);
    auto bar() { return 6; }
    assert(bar == 6);
}

auto foo() { return 5; }
