test/fail_compilation/silent_discard.nt
module silent_discard;

import std.error;
macro import std.macro.assert;

(void | Error) test() {
    return new Error("foo");
}

(void | Error) test2() {
    test;
    return;
}

void main() {
    auto ret = test2;
    assert(ret.case(void: false, Error e: e.message == "foo"));
}
